ufw (0.28) UNRELEASED; urgency=low

  * translation fixes
  * add interface rules
  * update Makefile to fail if byte-compiling failed
  * install rules files 0640 (LP: #393187)

 -- Jamie Strandboge <jamie@ubuntu.com>  Thu, 04 Jun 2009 18:21:28 -0500

ufw (0.27.1) RELEASED; urgency=low

  * update README for instructions on integrating ufw into the boot process
  * adjust strings to better conform with translation guidelines (LP: #353424)
  * adjust translation location to work with rosetta

 -- Jamie Strandboge <jamie@ubuntu.com>  Mon, 23 Mar 2009 12:06:27 -0500

ufw (0.27) RELEASED; urgency=low

  * don't do symlink check anymore (LP: #317700)
  * don't do hidden file check anymore (LP: #319226). Hidden application
    profiles are already skipped, so this check only bumps into revision
    control systems
  * add 'status numbered' command
  * more comments in conf/sysctl.conf
  * add insert rule support (LP: #260745)
  * read in rules from /var/lib/ufw/*.rules. This helps keep status inline
    with reality and fixes (LP: #262975)
  * add loglevel support. This also changed the default rules files
  * add per rule logging support
  * get rid of redundant RETURN rules
  * update LIMIT logging prefix
  * update setup.py to use subprocess instead of Popen3

 -- Jamie Strandboge <jamie@ubuntu.com>  Sat, 17 Jan 2009 07:15:25 -0600

ufw (0.26) RELEASED; urgency=low

  * fix formatting when using 'app update all' (LP: #300726)
  * add runtime version check for iptables and warn if using IPv6 application
    rules with iptables < 1.4
  * Makefile: depend on translations when making tarball
  * remove more useless newlines
  * man page updates
  * display interfaces and exact packet counters in 'status raw'
  * support REJECT for rules, default policy and default application policy
    (LP: #197322)
  * only flush and delete ufw chains
  * add a 'flush-all' command to ufw-init
  * add MANAGE_BUILTINS option to /etc/default/ufw, and when set to 'yes'