@@ -4,6 +4,8 @@ ufw (0.28) UNRELEASED; urgency=low
   * add interface rules
   * update Makefile to fail if byte-compiling failed
   * install rules files 0640 (LP: #393187)
+  * adjust help command for proper translation and bash completion support
+  * add limit command to help (LP: #358964)
 
  -- Jamie Strandboge <jamie@ubuntu.com>  Thu, 04 Jun 2009 18:21:28 -0500
 
